--- a/README.rdoc
+++ b/README.rdoc
@@ -31,6 +31,8 @@ More information about the QuickBase Client is available here -
 
 == Change History
 
+1.0.20 - 11/18/2011 - Added optional dfid param to getRecordAsHTML.
+
 1.0.19 - 11/13/2011 - Accommodate Net::HTTP changes in Ruby 1.9.3.
 
 1.0.18 - 09/16/2011 - editRecord() now supports using optional key field as a record identifier.
@@ -48,8 +50,6 @@ More information about the QuickBase Client is available here -
 1.0.12 - 05/08/2011 - Added findRecords and find_records getFilteredRecords aliases.
 
 1.0.11 - 05/08/2011 - Fixed a problem with getFilteredRecords().
-
-1.0.10 - 03/27/2011 - Can now use require 'quickbase_client' instead of require 'QuickBaseClient'.
 
 See CHANGES file for earlier updates.
 
