--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 == Change History
 
+1.0.23 - 03/11/2013 - Added getRealmForDbid(dbid)
+
 1.0.22 - 11/17/2012 - Added downloadAndSaveFile, uploadFileContents.
 
 1.0.21 - 05/28/2012 - Changed gem homepage to github.
