--- a/README.rdoc
+++ b/README.rdoc
@@ -60,7 +60,7 @@ Please submit questions, feedback, suggestions on Intuit's Community Forum at ht
 
 == License
 
-Copyright (c) 2009-2012 Gareth Lewis and Intuit, Inc.
+Copyright (c) 2009-2013 Gareth Lewis
 
 All rights reserved. This program and the accompanying materials
 are made available under the terms of the Eclipse Public License v1.0
